# embedded-cpp-pro-starter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.dev  README.md  SECURITY.md
.github/workflows/: ci.yml  dev-image.yml  release.yml  wiki-sync.yml
cmake/toolchains/: arm-gcc.cmake
docs/: Doxyfile
docs/wiki/: Architecture.md  Build-and-Run.md  CI-CD.md  Contribution-Guide.md  Cross-Compiling.md  Dev-Container.md  Getting-Started.md  Home.md  Release-Process.md  Security.md  Static-Analysis.md  Troubleshooting.md  _Sidebar.md
include/core/: log.hpp  version.hpp
include/hal/: gpio.hpp
scripts/: analyze.sh  build.sh  coverage.sh  docs.sh  format.sh  publish_wiki.sh  test.sh
src/: main.cpp
src/core/: log.cpp  version.cpp
src/firmware/: main_firmware.cpp
src/hal/: gpio.cpp
tests/: test_gpio.cpp  test_version.cpp
